Update and rename Day17 task index.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Country Info</title>
 </head>
-<link rel="stylesheet" href="day17 task style.css">
+<link rel="stylesheet" href="style.css">
 <body>
 
     <div class="container mt-4">
         <div class="row" id="countryCards"></div>
     </div>
 
-    <script src="Day17 task script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
